tests/fixtures/errors/invalid_import_absolute_path.puml
@startuml
!import /tmp/not_allowed.puml
Alice -> Bob: unreachable
@enduml
